--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint:sol": "solhint '{contracts,test}/**/*.sol' && prettier -c '{contracts,test}/**/*.sol'",
     "lint:sol:fix": "prettier --write '{contracts,test}/**/*.sol'",
     "clean": "hardhat clean && rimraf build contracts/build",
+    "prepare": "scripts/prepare.sh",
     "prepack": "scripts/prepack.sh",
     "generate": "scripts/generate/run.js",
     "release": "scripts/release/release.sh",
